<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="wrap_content"
        android:layout_height="275dp"
        android:layout_margin="10dp"
        android:src="@drawable/hero">
    </de.hdodenhof.circleimageview.CircleImageView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vivek_saha"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/web_developer_android_developer_yt_content_creator"
        android:textAlignment="center"
        android:textStyle="italic"
        android:layout_margin="2dp"
        android:textColor="@color/purple_700">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a_passionate_student_who_loves_to_learn_about_new_tech_and_loves_to_explore_new_things"
        android:textAlignment="center"
        android:layout_margin="3dp"
        android:textColor="@color/teal_700">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skills_knowlegde_in"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_margin="3dp">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c_c_java_kotlin_javascript_python_git"
        android:textAlignment="center"
        android:layout_margin="2dp"
        android:textColor="@color/teal_700">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect_with_me_by"
        android:textAlignment="center"
        android:layout_margin="5dp"
        android:textColor="@color/material_dynamic_primary20"
        android:textSize="18sp">
    </TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20sp">

        <ImageView
            android:id="@+id/gmail"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="5dp"
            android:rotation="0"
            android:rotationX="0"
            android:rotationY="0"
            android:src="@drawable/gmail">
        </ImageView>

        <ImageView
            android:id="@+id/github"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="5dp"
            android:rotation="0"
            android:rotationX="0"
            android:rotationY="0"
            android:src="@drawable/github">
        </ImageView>

        <ImageView
            android:id="@+id/insta"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="5dp"
            android:rotation="0"
            android:rotationX="0"
            android:rotationY="0"
            android:src="@drawable/insta">
        </ImageView>

        <ImageView
            android:id="@+id/linkedin"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="5dp"
            android:rotation="0"
            android:rotationX="0"
            android:rotationY="0"
            android:src="@drawable/linkedin">
        </ImageView>

        <ImageView
            android:id="@+id/twitter"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="5dp"
            android:rotation="0"
            android:rotationX="0"
            android:rotationY="0"
            android:src="@drawable/twitter">
        </ImageView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp">

        <ImageView
            android:id="@+id/facebook"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="5dp"
            android:src="@drawable/facebook">
        </ImageView>

        <ImageView
            android:id="@+id/whatsapp"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="5dp"
            android:src="@drawable/whatsapp">
        </ImageView>

        <ImageView
            android:id="@+id/telegram"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="5dp"
            android:src="@drawable/telegram">
        </ImageView>

        <ImageView
            android:id="@+id/youtube"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="5dp"
            android:src="@drawable/youtube">
        </ImageView>

        <ImageView
            android:id="@+id/share"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="5dp"
            android:src="@drawable/share">
        </ImageView>
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_here_to_view_web_portfolio"
        android:layout_marginStart="50dp">
    </Button>

</LinearLayout>